# C-Supinfo

./: CMakeLists.txt  README.md
Include/: Board.h  Game.h  Menu.h  Player.h  Tiles.h
Source/: Board.cpp  Game.cpp  Menu.cpp  Player.cpp  Tiles.cpp  main.cpp
